added accident_report (skademeldingskjema). saves to DB. no upload support.

--- a/app/views/users/rental_history.html.erb
+++ b/app/views/users/rental_history.html.erb
@@ -11,5 +11,7 @@
             </p>
         </div>
 
+        <%= link_to "Skademeldingskjema", users_accident_reports_path %>
+
     </div>
 </div>
