--- a/app/views/users/payout.html.erb
+++ b/app/views/users/payout.html.erb
@@ -4,31 +4,17 @@
   <div class="row">
     <div class="eight columns">
     <%= render layout: "gray_box", locals: {title: "Overføre", id: "overfoere"} do %>
-      <table>
-        <tr>
-          <td>Din plendit payout saldo</td>
-          <td><%= format_monetary_full @financial_transaction_payout[:amount] %></td>
-        </tr>
-        <% if current_user.user_payment_account.present? %>
-          <tr>
-            <td>Bankgebyr</td>
-            <td><%= format_monetary_full @financial_transaction_payout[:fees] %></td>
-          </tr>
-          <tr>
-            <td>
-                Blir overført til kontornr <%= current_user.user_payment_account.pretty_bank_account_number %>
-            </td>
-            <%# FIXME: can be negative if transaction_payout is zero: %>
-            <td><%= format_monetary_full( @financial_transaction_payout[:amount] - @financial_transaction_payout[:fees] ) %></td>
-          </tr>
-        <% else %>
-          TRANSLATEME: You need to configure a bank account before you can transfer any funds.
-        <% end %>
-      </table>
+      <%= render partial: "users/payment/payout_summary_table" %>
 
-      <% if current_user.user_payment_account.present? %>
+      <%-
+        if current_user.user_payment_account.present? &&
+          ( @financial_transaction_payout[:amount] > 0 ) &&
+          ( @financial_transaction_payout[:amount] > @financial_transaction_payout[:fees] )
+      -%>
+
         <%= button_to "overfør", payment_payout_users_path, class: "button" %>
-      <% end %>
+      <%- end -%>
+
       <%= link_to "avbryte", payment_users_path %>
 
       <% if @financial_transaction_payout[:fees] > 0 %>
