--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -59,15 +59,15 @@
         <div class="row">
             <div class="seven columns">
 
-    <% if current_user.user_payment_cards.length > 1 %>
+    <% if current_user.user_payment_cards.card_valid.length > 1 %>
         Velg det kredittkortet du ønsker å betale med:
         <%# would have been nice to call the field below for user_payment_card_guid %>
         <%# FIXME: auto-select favorite card %>
-        <%= collection_select( :booking, :user_payment_card_id, @booking.from_user.user_payment_cards.decorate, :guid, :pretty_view ) %>
-    <% elsif current_user.user_payment_cards.length == 1 %>
+        <%= f.collection_select( :user_payment_card_id, @booking.from_user.user_payment_cards.card_valid.decorate, :guid, :pretty_view ) %>
+    <% elsif current_user.user_payment_cards.card_valid.length == 1 %>
     Reservasjonen skal belastes på følgende kredittkort:
-        <%= f.label 'booking[user_payment_card_id]', @booking.from_user.user_payment_cards.decorate.first.pretty_view %>
-        <%= f.hidden_field 'booking[user_payment_card_id]', value: @booking.from_user.user_payment_cards.decorate.first.guid %>
+        <%= f.label 'booking[user_payment_card_id]', @booking.from_user.user_payment_cards.card_valid.decorate.first.pretty_view %>
+        <%= f.hidden_field 'booking[user_payment_card_id]', value: @booking.from_user.user_payment_cards.card_valid.decorate.first.guid %>
     <% else %>
 
 Noe gikk galt: Du må registrere kredittkortet ditt før du kan sende en forespørsel.
