Some more margin on ad copy on small screens

--- a/app/assets/stylesheets/_ad_input_copy.scss
+++ b/app/assets/stylesheets/_ad_input_copy.scss
@@ -2,9 +2,13 @@
 
 .ad-input-copy {
     padding-top: $standard-spacing * 2;
+    @media (max-width: $mobile) {
+        margin: 0 $standard-spacing 0 $standard-spacing;
+    }
 
     &__badge {
         float: left;
         margin: 0 12px 12px 0;
+
     }
 }
