--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -134,17 +134,17 @@
             </div>
 
             <div data-controller="updateMainPriceDetails">
-                <div>
+                <div class="main-price__row">
                     <span class="main-price__label">Leiegebyr:</span>
                     <span class="main-price__value"><%= format_monetary_full_pretty @ad.booking_calculator.total_fee(@ad.main_payin_rule) %></span>
                 </div>
 
-                <div>
+                <div class="main-price__row">
                     <i>Inkluderer forsikring opp til</i>
                     <i><%= format_monetary_full_pretty(@ad.booking_calculator.max_insurance_coverage(@ad.main_payin_rule)) %></i>
                 </div>
 
-                <div>
+                <div class="main-price__row">
                     <strong class="main-price__label">Utebetalt til deg:</strong>
                     <strong class="main-price__value"><%= format_monetary_full_pretty(@ad.booking_calculator.payout_amount(@ad.main_payin_rule)) %></strong>
                 </div>
