--- a/app/views/users/_edit_profile.html.erb
+++ b/app/views/users/_edit_profile.html.erb
@@ -18,11 +18,11 @@
         <div class="row">
             <div class="six columns">
                 <%= f.label :first_name, 'Fornavn:' %>
-                <%= f.text_field :first_name, class: 'u-full-width' %>
+                <%= f.text_field :first_name, class: 'u-full-width', required: true %>
             </div>
             <div class="six columns">
                 <%= f.label :last_name, 'Etternavn:' %>
-                <%= f.text_field :last_name, class: 'u-full-width' %>
+                <%= f.text_field :last_name, class: 'u-full-width', required: true %>
             </div>
         </div>
 
@@ -51,7 +51,7 @@
         <div class="row">
             <div class="six columns">
                 <%= f.label :email, 'E-post:' %>
-                <%= f.text_field :email, class: 'u-full-width' %>
+                <%= f.text_field :email, class: 'u-full-width', required: true %>
             </div>
         </div>
         <div class="row">
@@ -102,7 +102,7 @@
 
 
         <p>
-            <small>Vi trenger addressen som hører til bankkontoen din.</small>
+            <small>Vi trenger addressen som hører til bankkontoen din:</small>
         </p>
         <div class="row">
             <div class="eight columns">
@@ -113,7 +113,7 @@
         <div class="row" data-controller="postalPlaceFetcher" data-postal-place-url="<%= postal_place_path %>">
             <div class="two columns">
                 <%= f.label :home_post_code, 'Postnr.' %>
-                <%= f.number_field :home_post_code, class: 'u-full-width', placeholder: 'Postnr.', maxlength: 5, data: {postal_code: ''} %>
+                <%= f.telephone_field :home_post_code, class: 'u-full-width', placeholder: 'Postnr.', maxlength: 4, data: {postal_code: ''} %><%# :pattern => '[0-9]{4}', %>
             </div>
             <div class="six columns">
                 <%= label_tag :poststed, 'Poststed' %>
