--- a/app/views/bookings/_booking_heading_box.html.erb
+++ b/app/views/bookings/_booking_heading_box.html.erb
@@ -3,7 +3,7 @@
         <%= image_tag ad.safe_image_url(:searchresult) %>
     </div>
     <div class="booking-heading__info-holder">
-        <h2><%= ad.display_title %></h2>
+        <h2 class="booking-heading__title"><%= ad.display_title %></h2>
         <div class="booking-heading__user-box">
 
             <div class="booking-heading__avatar-holder">
