--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <h2>Leieforespørsel til <%= @ad.user.display_name %></h2>
-        <div>Status: Ikke sendt</div>
+        <div class="twelve columns">Status: Ikke sendt</div>
 
         <div class="twelve columns">
             <div class="u-push-down">
