clean up: send correct parameter, as the previous way will be deprecated

--- a/app/views/financial_transactions/_financial_transaction_list.html.erb
+++ b/app/views/financial_transactions/_financial_transaction_list.html.erb
@@ -10,7 +10,7 @@
     <td>Verdi</td>
   </thead>
   <tbody>
-    <%= render FinancialTransaction.finished.from_user( current_user )  %>
+    <%= render FinancialTransaction.finished.from_user( current_user.id )  %>
   </tbody>
 
 </table>
