Updated colors for help box

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -262,8 +262,8 @@
 .help-box {
     margin-top: $standard-spacing * 2;
     padding: $standard-spacing;
-    background-color: $color-privacy-yellow;
-    border: solid thin darken($color-privacy-yellow, 30);
+    background-color: #ecf8ff;
+    border: solid thin #b9e5ff;
     font-style: italic;
 }
 
