--- a/app/views/users/payment/_payout_summary_table.html.erb
+++ b/app/views/users/payment/_payout_summary_table.html.erb
@@ -4,8 +4,7 @@
     <td><%= format_monetary_full @financial_transaction_payout[:amount] %></td>
   </tr>
 
-  <%
-  if current_user.user_payment_account.present? &&
+  <%- if current_user.user_payment_account.present? &&
     ( @financial_transaction_payout[:amount] > 0 ) &&
     ( @financial_transaction_payout[:amount] > @financial_transaction_payout[:fees] )
   -%>
@@ -20,7 +19,7 @@
       <%# FIXME: can be negative if transaction_payout is zero: %>
       <td><%= format_monetary_full( @financial_transaction_payout[:amount] - @financial_transaction_payout[:fees] ) %></td>
     </tr>
-  <% end %>
+  <%- end -%>
 
 </table>
 
@@ -29,6 +28,6 @@
   TRANSLATEME: You need to configure a bank account before you can transfer any funds.
 <% elsif @financial_transaction_payout[:amount] == 0 %>
   TRANSLATEME: You need to have funds before you can transfer it.
-<% else %>
-  TRANSLATEME: you need to have at least <%= %> in your wallet before you can transfer them.
+<% elsif @financial_transaction_payout[:amount] < @financial_transaction_payout[:fees] %>
+  TRANSLATEME: you need to have at least <%= format_monetary_full @financial_transaction_payout[:fees] %> in your wallet before you can transfer funds to your bank account.
 <% end %>
