user_payment_card: show the status/validity of the card, in a rough format. needs polish.

--- a/app/views/user_payment_cards/_user_payment_card.html.erb
+++ b/app/views/user_payment_cards/_user_payment_card.html.erb
@@ -22,6 +22,9 @@
     <% end %>
   </td>
   <td>
+    <%= user_payment_card.validity %>
+  </td>
+  <td>
     <%# params: { 'user[user_payment_card][guid]' => user_payment_card.guid } %>
     <%# FIXME: evil to style directly in the html tags %>
     <%= button_to user_payment_card, method: :delete, class: "button u-pull-right", style:"background-color:red ; color:white", form_class: "u-inline", data: { confirm: 'Are you sure?' } do %>
